--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && electron .",
-    "dev": "tsc && electron .",
+    "dev": "npm run build && electron .",
     "clean": "rimraf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
