--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,6 @@ jspm_packages/
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# Claude Code settings
+.claude/settings.local.json
