--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && electron .",
     "dev": "npm run build && electron .",
     "clean": "rimraf dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node src/tests/sorting.test.js"
   },
   "keywords": [
     "electron",
