--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npm run build && electron .",
     "dev": "npm run build && electron .",
     "clean": "rimraf dist",
-    "test": "node src/tests/sorting.test.js"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "electron",
@@ -18,9 +20,14 @@
   "license": "ISC",
   "description": "Velocity - An Electron TypeScript application",
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "electron": "^37.2.5",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
