--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,10 +32,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
+        run: npm install
 
       - name: Build TypeScript
         run: npm run build
