--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ env:
 
 jobs:
   build-and-tag:
+    permissions:
+      contents: write
+      id-token: write
     runs-on: windows-latest
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
 
