--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "start": "npm run build && electron .",
-    "dev": "npm run build && electron .",
+    "dev": "npm run build && cross-env NODE_ENV=development electron .",
+    "dev:watch": "npm run build && concurrently \"npm run build:watch\" \"nodemon --exec \\\"cross-env NODE_ENV=development electron .\\\" --watch dist --ext js\"",
     "clean": "rimraf dist",
     "electron": "npm run build && electron .",
     "pack": "npm run build && electron-builder --dir",
@@ -29,16 +31,21 @@
     "@jest/globals": "^30.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "chokidar": "^4.0.3",
+    "concurrently": "^9.2.0",
+    "cross-env": "^10.0.0",
     "electron": "^37.2.5",
     "electron-builder": "^25.1.8",
+    "electron-reload": "^2.0.0-alpha.1",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "wait-on": "^8.0.4"
   },
-  "dependencies": {},
   "build": {
     "appId": "com.velocity.launcher",
     "productName": "Velocity Launcher",
