feat: Implement automatic update system with UI notifications
- Added auto-update functionality using electron-updater
- Created update modal and button in the UI for update notifications
- Implemented IPC communication for update checks, downloads, and installations
- Enhanced main process to handle update events and logging
- Updated README and documentation to reflect new features
- Added styles for update UI components
- Updated package.json and package-lock.json to include necessary dependencies

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,10 +79,10 @@ jobs:
 
       - name: Create and push tag
         run: |
-          $buildTag = "${{ steps.build-tag.outputs.tag }}"
-          git tag $buildTag
-          git push origin $buildTag
-          echo "Created and pushed tag: $buildTag"
+          $buildVersion = "${{ steps.build-tag.outputs.version }}"
+          git tag $buildVersion -m "Release $buildVersion"
+          git push origin $buildVersion
+          echo "Created and pushed tag: $buildVersion"
         shell: powershell
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
