--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,10 +93,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.build-tag.outputs.tag }}
-          name: "v${{ steps.build-tag.outputs.tag }}"
+          name: "${{ steps.build-tag.outputs.tag }}"
           body: |
             ## Automated Build Release
 
@@ -105,16 +105,6 @@ jobs:
             - Commit: ${{ github.sha }}
             - Branch: ${{ github.ref_name }}
             - Timestamp: ${{ steps.build-tag.outputs.tag }}
-
-            **Included Files:**
-            - Windows Installer - `velocity-${{ steps.build-tag.outputs.version }}-x64.exe`
-            - Portable Executable - `velocity-${{ steps.build-tag.outputs.version }}-portable.exe`
-            - Zip Archive - `velocity-${{ steps.build-tag.outputs.version }}-x64.zip`
-
-            ### Download Instructions:
-            - **For most users**: Download the Windows Installer
-            - **For portable use**: Download the Portable executable
-            - **For manual extraction**: Download the Zip archive
           draft: false
           prerelease: true
           files: |
